lib/src/compiler/tests/testdata/errors/14.out
error[E104]: unexpected negative number
 --> line:5:15
  |
5 |     $a in (0..-2)
  |               ^^ this number can not be negative
  |